# queue-server

./: .editorconfig  .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.yaml  spec.md
.github/workflows/: Deploy.yml  deploy-chat-server.yml  deploy-queue-api.yml  deploy-queue-manager.yml  docker-multi-build.yml
chat/: LikeLionChat.slnx
chat-client/: README.md  package.json  pyproject.toml  tsconfig.json
chat-client/src/: app.ts  chat.ts  cli.ts  config.ts  messages.ts  queue.ts  ui.tsx
chat-client/src/chat_client/: __init__.py  cli.py  messages.py
chat-server/: AppJsonSerializerContext.cs  ChatServer.csproj  ChatServer.sln.DotSettings  ChatServer.slnx  ChatServerOptions.cs  CommonTypes.cs  Dockerfile  Extensions.cs  Program.cs  appsettings.Development.json  appsettings.json
chat-server/Properties/: launchSettings.json
chat-server/Repositories/: RedisTicketRepository.cs  TicketRepository.cs
chat-server/Services/: AuthService.cs  ChatService.cs  ChatServiceTypes.cs  MetricService.cs  ServerStatusService.cs
chat/LikeLionChat.AppHost/: AppHost.cs  LikeLionChat.AppHost.csproj
chat/LikeLionChat.Client/: ChatClient.cs  ChatForm.Designer.cs  ChatForm.cs  LikeLionChat.Client.csproj  MainForm.Designer.cs  MainForm.cs  Program.cs  QueueClient.cs  (+2 more)
k6/: README.md  chat-flow.js
load-tests/: README.md  chat-flow.js
observability/: alloy-config.alloy  grafana-dashboards.yml  grafana-datasources.yml  loki-config.yaml  prometheus.yml
queue/: build.gradle  gradlew  settings.gradle
queue-api/: Dockerfile  build.gradle
queue-manager/: build.gradle
(+52 files in other folders)
