[project]
name = "chat-client"
version = "0.1.0"
description = "Queue-API 및 ChatServer 연동을 검증하는 CLI 더미 클라이언트"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "LikeLion Cloud", email = "dev@likelion.org" }
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0"
]

[project.scripts]
chat-client = "chat_client.cli:run_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chat_client"]
